tests/fixtures/syntax/valid/write_step_empty_block.repor
case "write step empty block" {
  write "empty.txt" ```
    ```
  $ true
  assert {
    exit 0
  }
}
