tests/fixtures/syntax/invalid/write_step_empty_path.repor
case "write step empty path is rejected" {
  write <""> ```
    x
    ```
  $ true
  assert {
    exit 0
  }
}
